--- a/graphics/graphite2/Makefile
+++ b/graphics/graphite2/Makefile
@@ -3,7 +3,8 @@
 PORTNAME=	graphite2
 PORTVERSION=	1.3.2
 CATEGORIES=	graphics print
-MASTER_SITES=	SF/silgraphite/${PORTNAME}
+MASTER_SITES=	http://projects.palaso.org/attachments/download/434/ \
+		SF/silgraphite/${PORTNAME}
 
 MAINTAINER=	office@FreeBSD.org
 COMMENT=	Rendering capabilities for complex non-Roman writing systems
