security/govpn: create port
PR:		200105
Submitted by:	Sergey Matveev <stargrave@stargrave.org> (with minor modifications)

--- a/security/Makefile
+++ b/security/Makefile
@@ -160,6 +160,7 @@
     SUBDIR += go.crypto
     SUBDIR += goptlib
     SUBDIR += gorilla
+    SUBDIR += govpn
     SUBDIR += gpa
     SUBDIR += gpasman
     SUBDIR += gpass
