New port: devel/py-efilter
EFILTER is a general-purpose destructuring and search language implemented in
Python, and suitable for integration with any Python project that requires a
search function for some of its data.

WWW: https://github.com/google/dotty

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -3959,6 +3959,7 @@
     SUBDIR += py-doit
     SUBDIR += py-durus
     SUBDIR += py-dynrules
+    SUBDIR += py-efilter
     SUBDIR += py-efl
     SUBDIR += py-eggtestinfo
     SUBDIR += py-enum34
