Update rekall to 1.4.1 It was split in 3 modules - security/py-rekall-core : CORE component with command line interface - security/py-rekall_gui : GUI with ipython and web interface - security/py-rekall : "meta" module

--- a/security/Makefile
+++ b/security/Makefile
@@ -275,8 +275,8 @@
     SUBDIR += libassuan
     SUBDIR += libbeid
     SUBDIR += libbf
-    SUBDIR += libcryptui
     SUBDIR += libbzrtp
+    SUBDIR += libcryptui
     SUBDIR += libecc
     SUBDIR += libfprint
     SUBDIR += libgcrypt
@@ -844,6 +844,8 @@
     SUBDIR += py-pysha3
     SUBDIR += py-python-registry
     SUBDIR += py-rekall
+    SUBDIR += py-rekall-core
+    SUBDIR += py-rekall_gui
     SUBDIR += py-requests-kerberos
     SUBDIR += py-rsa
     SUBDIR += py-service_identity
