--- a/devel/rubygem-foreman/Makefile
+++ b/devel/rubygem-foreman/Makefile
@@ -2,6 +2,7 @@
 
 PORTNAME=	foreman
 PORTVERSION=	0.78.0
+PORTREVISION=	1
 CATEGORIES=	devel rubygems
 MASTER_SITES=	RG
 
@@ -15,6 +16,8 @@ RUN_DEPENDS=	rubygem-thor>=0.19.1:${PORTSDIR}/devel/rubygem-thor
 USE_RUBY=	yes
 USE_RUBYGEMS=	yes
 RUBYGEM_AUTOPLIST=	yes
+USES=		shebangfix
+SHEBANG_FILES=	spec/resources/bin/env
 
 PLIST_FILES=	bin/foreman
 
