--- a/textproc/rubygem-linguistics/Makefile
+++ b/textproc/rubygem-linguistics/Makefile
@@ -3,6 +3,7 @@
 
 PORTNAME=	linguistics
 PORTVERSION=	2.0.4
+PORTREVISION=	1
 CATEGORIES=	textproc rubygems
 MASTER_SITES=	RG
 
@@ -10,11 +11,15 @@ MAINTAINER=	ruby@FreeBSD.org
 COMMENT=	Framework for extending Ruby objects with linguistic methods
 
 LICENSE=	BSD3CLAUSE
+LICENSE_FILE=	${WRKSRC}/LICENSE
 
 RUN_DEPENDS=	rubygem-loggability>=0.11:${PORTSDIR}/textproc/rubygem-loggability
 
 USE_RUBY=	yes
 USE_RUBYGEMS=	yes
 RUBYGEM_AUTOPLIST=	yes
+USES=		shebangfix
+SHEBANG_FILES=	lib/linguistics.rb \
+		lib/linguistics/en/linkparser.rb
 
 .include <bsd.port.mk>
