--- a/databases/pgbadger/Makefile
+++ b/databases/pgbadger/Makefile
@@ -2,10 +2,12 @@
 # $FreeBSD$
 
 PORTNAME=	pgbadger
-PORTVERSION=	6.2
-PORTREVISION=	1
+PORTVERSION=	7.1
 CATEGORIES=	databases
-MASTER_SITES=	SF/${PORTNAME}/${PORTVERSION}
+
+USE_GITHUB=	yes
+GH_ACCOUNT=	dalibo
+GH_TAGNAME=	v${PORTVERSION}
 
 MAINTAINER=	girgen@FreeBSD.org
 COMMENT=	Very competent log analyzer for PostgreSQL
