--- a/databases/pgbadger/Makefile
+++ b/databases/pgbadger/Makefile
@@ -3,11 +3,11 @@
 
 PORTNAME=	pgbadger
 PORTVERSION=	7.1
+DISTVERSIONPREFIX=v
 CATEGORIES=	databases
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	dalibo
-GH_TAGNAME=	v${PORTVERSION}
 
 MAINTAINER=	girgen@FreeBSD.org
 COMMENT=	Very competent log analyzer for PostgreSQL
