Unset HAVE_MACH_MACH_H in a few more cmake locations

--- a/devel/llvm37/Makefile
+++ b/devel/llvm37/Makefile
@@ -236,8 +236,10 @@ post-patch:
 	    ${WRKSRC}/utils/lit/lit.py ${WRKSRC}/utils/lit/lit/*.py
 
 post-configure:
-	@${REINPLACE_CMD} -e 's|#cmakedefine HAVE_MACH_MACH_H|#cmakedefine NOHAVE_MACH_MACH_H|g' \
+	@${REINPLACE_CMD} -e 's|HAVE_MACH_MACH_H|NOHAVE_MACH_MACH_H|g' \
 		${WRKSRC}/include/llvm/Config/config.h.cmake
+	@${REINPLACE_CMD} -e 's|HAVE_MACH_MACH_H|NOHAVE_MACH_MACH_H|g' \
+		${WRKSRC}/cmake/config-ix.cmake
 
 post-install:
 	${RMDIR} ${STAGEDIR}${LLVM_PREFIX}/include/llvm/MC/MCAnalysis
