--- a/security/stunnel/files/stunnel.in
+++ b/security/stunnel/files/stunnel.in
@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# $FreeBSD$
+# $FreeBSD: head/security/stunnel/files/stunnel.in 340872 2014-01-24 00:14:07Z mat $
 #
 
 # PROVIDE: stunnel
