Add depend on libnotify.so.4 to bring in the port

--- a/www/webkit-gtk2/Makefile
+++ b/www/webkit-gtk2/Makefile
@@ -20,7 +20,8 @@ LIB_DEPENDS=	libenchant.so:${PORTSDIR}/textproc/enchant \
 		libharfbuzz.so:${PORTSDIR}/print/harfbuzz \
 		libwebp.so:${PORTSDIR}/graphics/webp \
 		libcurl.so:${PORTSDIR}/ftp/curl \
-		libsoup-2.4.so:${PORTSDIR}/devel/libsoup
+		libsoup-2.4.so:${PORTSDIR}/devel/libsoup \
+		libnotify.so.4:${PORTSDIR}/devel/libnotify
 RUN_DEPENDS=	geoclue>=0:${PORTSDIR}/net/geoclue
 
 PORTSCOUT=	limit:1.4.*$$
