--- a/sysutils/dt/Makefile
+++ b/sysutils/dt/Makefile
@@ -3,6 +3,7 @@
 
 PORTNAME=	dt
 PORTVERSION=	17.07
+PORTREVISION=	1
 CATEGORIES=	sysutils
 MASTER_SITES=	http://home.comcast.net/~SCSIguy/SCSI_FAQ/RMiller_Tools/ftp/dt/ \
 		http://T32.TecNik93.com/FreeBSD/ports/dt/sources/
@@ -13,12 +14,21 @@ COMMENT=	Data Test Program - disk/tape error diagnostic tool
 
 OPTIONS_DEFINE=	DOCS
 
+USES=		shebangfix
+SHEBANG_FILES=	Scripts/DiskTests.ksh \
+		Scripts/butterfly.ksh \
+		Scripts/butterfly_file.ksh \
+		Scripts/dt_noprog_script.ksh
 WRKSRC=		${WRKDIR}/dt.d
 MAKEFILE=	Makefile.freebsd
 ALL_TARGET=	dt
 LICENSE=	ISCL
 
 PORTDOCS=	README.1st ToDoList WhatsNew-* dt-UsersGuide.pdf dt-Overview.txt
+
+post-patch:
+	@${REINPLACE_CMD} -i '' -e 's|/usr/bin/ksh|${ksh_CMD}|' \
+		${WRKSRC}/Scripts/trigger-AIX.ksh
 
 do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/dt ${STAGEDIR}${PREFIX}/sbin
