--- a/multimedia/Makefile
+++ b/multimedia/Makefile
@@ -279,6 +279,7 @@
     SUBDIR += p5-Subtitles
     SUBDIR += p5-Umph-Prompt
     SUBDIR += p5-Video-OpenQuicktime
+    SUBDIR += pHash
     SUBDIR += phonon
     SUBDIR += phonon-designerplugin
     SUBDIR += phonon-gstreamer
