multimedia/php-pHash: add new port
PR:		202635
Submitted by:	Naram Qashat <cyberbotx@cyberbotx.com>

This is the PHP extension of the pHash library, which is an open source software
library released under the GPLv3 license that implements several perceptual
hashing algorithms, and provides a C-like API to use those functions in your own
programs. pHash itself is written in C++.

http://phash.org/

--- a/multimedia/Makefile
+++ b/multimedia/Makefile
@@ -286,6 +286,7 @@
     SUBDIR += phonon-vlc
     SUBDIR += phonon-xine
     SUBDIR += photofilmstrip
+    SUBDIR += php-pHash
     SUBDIR += pitivi
     SUBDIR += playd
     SUBDIR += plexhometheater
