This is a Sphinx extension for linking to wikipedia articles.
WWW: https://github.com/quiver/sphinx-ext-wikipedia

--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -1261,6 +1261,7 @@
     SUBDIR += py-sphinx-intl
     SUBDIR += py-sphinx_rtd_theme
     SUBDIR += py-sphinx_numfig
+    SUBDIR += py-sphinx_wikipedia
     SUBDIR += py-sphinxcontrib-adadomain
     SUBDIR += py-sphinxcontrib-bitbucket
     SUBDIR += py-sphinxcontrib-httpdomain
