- Fix FONTSDIR. - Use post-install-DOCS-on.

--- a/japanese/font-mona-ipa/Makefile
+++ b/japanese/font-mona-ipa/Makefile
@@ -2,7 +2,7 @@
 
 PORTNAME=	mona-ipa
 PORTVERSION=	1.0.8
-PORTREVISION=	4
+PORTREVISION=	5
 CATEGORIES=	japanese x11-fonts
 MASTER_SITES=	http://www.geocities.jp/ipa_mona/
 PKGNAMEPREFIX=	ja-font-
@@ -20,6 +20,7 @@ DATADIR=	${PREFIX}/share/font-${PORTNAME}
 PORTDOCS=	COPYING.font.ja README_ipamona.txt
 
 OPTIONS_DEFINE=	DOCS
+FONTNAME=	TTF
 
 do-install:
 	${MKDIR} ${STAGEDIR}${DATADIR}
@@ -37,6 +38,8 @@ do-install:
 	${LN} -s -f ../conf.avail/62-fonts-${PORTNAME}.conf \
 	    ${STAGEDIR}${PREFIX}/etc/fonts/conf.d/62-fonts-${PORTNAME}.conf
 	${MKDIR} ${STAGEDIR}${DOCSDIR}
+
+post-install-DOCS-on:
 	cd ${WRKSRC}/fonts && ${INSTALL_DATA} ${PORTDOCS} ${STAGEDIR}${DOCSDIR}
 
 .include <bsd.port.mk>
