--- a/japanese/font-ipaex/files/pkg-install.in
+++ b/japanese/font-ipaex/files/pkg-install.in
@@ -1,7 +1,7 @@
 #!/bin/sh
 # $FreeBSD$
 
-FONTSDIR=%%FONTSDIR%%/OTF
+FONTSDIR=%%FONTSDIR%%
 
 catfontsdir ()
 {
@@ -76,7 +76,7 @@ nfonts ()
 
 case "$2" in
 POST-INSTALL)
-	cd ${FONTSDIR}
+	cd %%FONTSDIR%%
 	touch fonts.dir
 	(catfontsdir < fonts.dir; addentries) > fonts.dir.tmp
 	nfonts < fonts.dir.tmp > fonts.dir
@@ -84,7 +84,7 @@ POST-INSTALL)
 	rm -f fonts.dir.tmp
 	;;
 POST-DEINSTALL)
-	cd ${FONTSDIR}
+	cd %%FONTSDIR%%
 	catfontsdir < fonts.dir > fonts.dir.tmp
 	nfonts < fonts.dir.tmp > fonts.dir
 	cat fonts.dir.tmp >> fonts.dir
