Align with latest 2.3.0 snapshot (post-hackathon)

--- a/security/libressl/Makefile
+++ b/security/libressl/Makefile
@@ -1,17 +1,11 @@
-# Created by: Vsevolod Stakhov <vsevolod@FreeBSD.org>
-# $FreeBSD: head/security/libressl/Makefile 397017 2015-09-15 19:22:46Z brnrd $
+# Created by: Bernard Spil <brnrd@FreeBSD.org>
+# $FreeBSD: head/security/libressl/Makefile 395668 2015-08-31 12:25:43Z brnrd $
 
 PORTNAME=	libressl
-<<<<<<< HEAD
-PORTVERSION=	2.2.3
-CATEGORIES=	security devel
-MASTER_SITES=	OPENBSD/LibreSSL
-=======
 PORTVERSION=	2.3.0
 CATEGORIES=	security devel
 MASTER_SITES=	https://brnrd.eu/pub/OpenBSD/LibreSSL/ \
 		OPENBSD/LibreSSL
->>>>>>> 10ca0771a28046affb4f5b25818def3a761c22de
 
 MAINTAINER=	vsevolod@FreeBSD.org
 COMMENT=	Free version of the SSL/TLS protocol forked from OpenSSL
@@ -21,47 +15,36 @@ LICENSE_FILE=	${WRKSRC}/COPYING
 
 CPE_VENDOR=	openbsd
 
-<<<<<<< HEAD
-CONFLICTS?=	openssl-[0-9]*
-
-GNU_CONFIGURE=	yes
-CONFIGURE_ARGS=	--enable-silent-rules
-=======
-OPTIONS_DEFINE=	API_MAN
-OPTIONS_DEFAULT=API_MAN
-OPTIONS_SUB=	yes
-
-API_MAN_DESC=	Install API manpages (command manpages always installed)
+OPTIONS_DEFINE= MAN3
+OPTIONS_DEFAULT=MAN3
+MAN3_DESC=      Install API manpages (section 3)
 
 CONFLICTS?=	openssl-[0-9]* \
+		libressl22-[0-9]* \
 		tcltls-[0-9]*
 
 GNU_CONFIGURE=	yes
-CONFIGURE_ARGS=	--disable--silent-rules
->>>>>>> 10ca0771a28046affb4f5b25818def3a761c22de
+CONFIGURE_ARGS=	--enable-silent-rules
 USES=		cpe libtool pathfix pkgconfig
 USE_LDCONFIG=	yes
 
-CFLAGS+=	-Darc4random=libressl_arc4random -Darc4random_buf=libressl_arc4random_buf
-
 INSTALL_TARGET=	install-strip
 
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
->>>>>>> 4243c1c6373d1b338727bc0c539ec0ea6788094b
 .include <bsd.port.pre.mk>
 
 .if ${ARCH} == "amd64"
 CONFIGURE_TARGET=	x86_64-portbld-${OPSYS:tl}${OSREL}
 .endif
 
-<<<<<<< HEAD
-=======
->>>>>>> 10ca0771a28046affb4f5b25818def3a761c22de
-=======
->>>>>>> 4243c1c6373d1b338727bc0c539ec0ea6788094b
 regression-test: build
 	cd ${WRKSRC} && ${MAKE} check
+
+OPTIONS_DEFINE= MAN3
+OPTIONS_DEFAULT=MAN3
+MAN3_DESC=      Install API manpages (section 3)
+
+post-install-MAN3-off:
+	${RM} -rf ${STAGEDIR}/${PREFIX}/man/man3
+	${REINPLACE_CMD} -e '/^man\/man3/d' ${TMPPLIST}
 
 .include <bsd.port.post.mk>
