databases/redis70: Copy from databases/redis
Copy databases/redis to databases/redis70 as preparation for updating
the former to 7.2.

--- a/databases/Makefile
+++ b/databases/Makefile
@@ -863,6 +863,7 @@
     SUBDIR += redis-devel
     SUBDIR += redis6
     SUBDIR += redis62
+    SUBDIR += redis70
     SUBDIR += redis_exporter
     SUBDIR += redisdesktopmanager
     SUBDIR += redisjson
