--- a/databases/redis62/Makefile
+++ b/databases/redis62/Makefile
@@ -18,7 +18,7 @@ CPE_PRODUCT=	redis
 MAKE_ENV=	OPTIMIZATION= \
 		V=yo
 
-CONFLICTS_INSTALL=	redis redis-devel redis6 # etc/rc.d/redis
+CONFLICTS_INSTALL=	redis redis-devel redis6 redis70 # etc/rc.d/redis
 
 PORTSCOUT=	limit:^6\.2
 
