multimedia/gstreamer1-plugins-rust: unbreak build on i386
fatal runtime error: Rust cannot catch foreign exceptions
thread '<unnamed>' panicked at '/wrkdirs/usr/ports/lang/rust/work/rustc-1.70.0-src/compiler/rustc_codegen_ssa/src/back/write.rs:1535:21: worker thread panicked', compiler/rustc_middle/src/util/bug.rs:36:26
error: could not compile `gst-plugin-aws` (lib)

(signal: 6, SIGABRT: process abort signal)

Reported by:	pkg-fallout

(cherry picked from commit eedc078964e546ac1e4a0b59a51d10e0f7263d58)
(cherry picked from commit 359c86d8812d78f6d7871739e0ccc4f1ccebc726)
(cherry picked from commit 3e78ac41f17524591589aa00e50fddd20a2e8014)

--- a/multimedia/gstreamer1-plugins-rust/Makefile
+++ b/multimedia/gstreamer1-plugins-rust/Makefile
@@ -28,6 +28,12 @@ CARGO_BUILD=	no
 CARGO_INSTALL=	no
 CARGO_TEST=	no
 
+.if ${MACHINE_ARCH} == i386
+# https://github.com/rust-lang/rust/issues/85598
+LTO_UNSAFE=	yes
+CARGO_ENV+=	CARGO_PROFILE_RELEASE_LTO=false
+.endif
+
 OPTIONS_DEFINE=	ASM CAIRO CSOUND DAV1D GTK4 PANGO SODIUM WEBP
 OPTIONS_DEFAULT=ASM CAIRO CSOUND DAV1D GTK4 PANGO SODIUM WEBP
 OPTIONS_EXCLUDE_aarch64=	CSOUND # https://github.com/neithanmo/csound-rs/commit/8962b89d7bda
