audio/mumble: fastfix DBUS option
PR:			261395
Approved by:		arrowd (mentor)
Differential Revision:	https://reviews.freebsd.org/D41047
MFH:			2023Q3

(cherry picked from commit 9b5f3990188145667e96afd58a5c27c0b4ef871f)

--- a/audio/mumble/Makefile
+++ b/audio/mumble/Makefile
@@ -69,6 +69,7 @@ ALSA_LIB_DEPENDS=	libasound.so:audio/alsa-lib
 AVAHI_CMAKE_BOOL=	zeroconf
 AVAHI_LIB_DEPENDS=	libdns_sd.so:net/avahi-libdns
 
+DBUS_USES=		qt:5
 DBUS_USE=		QT=dbus
 DBUS_CMAKE_BOOL=	dbus
 
