devel/maven39: new port: version 3.9 of devel/maven
java/eclipse requires Maven 3.9+ and actual version of devel/maven is 3.8.
This patch adds devel/maven39 to manage this requirement.

Changelog: https://maven.apache.org/docs/3.9.4/release-notes.html

Co-authored-by: Michael Osipov <michaelo@apache.org>

PR:		272863

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1573,6 +1573,7 @@
     SUBDIR += mate-common
     SUBDIR += maven
     SUBDIR += maven-wrapper
+    SUBDIR += maven39
     SUBDIR += maven363
     SUBDIR += mcpp
     SUBDIR += mdb
