--- a/editors/openoffice-4/Makefile
+++ b/editors/openoffice-4/Makefile
@@ -113,8 +113,6 @@ RUN_DEPENDS+=	gcc${GCC_DEFAULT}>0:lang/gcc${GCC_DEFAULT}
 USES=		autoreconf bison compiler:c++11-lib cpe desktop-file-utils \
 		gettext-runtime gl gmake gnome iconv jpeg perl5 pkgconfig \
 		shared-mime-info ssl tar:bzip2 xorg
-BROKEN_SSL=	openssl30 openssl31
-BROKEN_SSL_REASON=	unsupported option -print-multi-os-directory
 USE_GL=		gl glu
 USE_GNOME=	gdkpixbuf2 gdkpixbuf2xlib gtk20 libxslt libidl glib20
 USE_JAVA=	yes
@@ -205,6 +203,11 @@ WITH=	SDK
 .if ${OPSYS} == FreeBSD && ( \
     (${OSVERSION} >= 1400051 && ${OSVERSION} < 1400057))
 BROKEN=	please update FreeBSD base system first to fix an ABI incompatibility
+.endif
+
+.if ( ${OPSYS} == FreeBSD && ${OSVERSION} >= 1400092 && ${SSL_DEFAULT} == base ) || ${SSL_DEFAULT:Mopenssl3*}
+BROKEN_SSL=	base openssl30 openssl31
+BROKEN_SSL_REASON=	Undefined symbol ERR_GET_FUNC
 .endif
 
 .if defined(WITH_DEBUG)
