x11-fonts/dejavu: Add upstream patch fixing fontconfig files
PR:		273041
Approved by:	sunpoet

--- a/x11-fonts/dejavu/Makefile
+++ b/x11-fonts/dejavu/Makefile
@@ -1,9 +1,12 @@
 PORTNAME=	dejavu
 PORTVERSION=	2.37
 DISTVERSIONPREFIX=	fonts-ttf-
-PORTREVISION=	1
+PORTREVISION=	2
 CATEGORIES=	x11-fonts
 MASTER_SITES=	https://github.com/dejavu-fonts/dejavu-fonts/releases/download/version_${PORTVERSION:R}_${PORTVERSION:E}/
+
+PATCH_SITES=	https://github.com/dejavu-fonts/dejavu-fonts/commit/
+PATCHFILES=	d9ee532b4f0a879372bdb006ac85d7807629ea98.patch:-p1
 
 MAINTAINER=	sunpoet@FreeBSD.org
 COMMENT=	Bitstream Vera Fonts clone with a wider range of characters
