graphics/mesa-dri: conditionally depend on LLVM
Don't depend on libLLVM if it's not required, as in the CheriABI case.

--- a/graphics/mesa-dri/Makefile
+++ b/graphics/mesa-dri/Makefile
@@ -6,8 +6,7 @@ CATEGORIES=	graphics
 COMMENT=	OpenGL hardware acceleration drivers for DRI2+
 WWW=		https://www.mesa3d.org/
 
-LIB_DEPENDS+=	libLLVM-${LLVM_DEFAULT}.so:devel/llvm${LLVM_DEFAULT} \
-		libglapi.so:graphics/mesa-libs
+LIB_DEPENDS+=	libglapi.so:graphics/mesa-libs
 
 OPTIONS_GROUP=			PLATFORM
 OPTIONS_GROUP_PLATFORM=		PLATFORM_X11 PLATFORM_WAYLAND
@@ -88,6 +87,7 @@ MESON_ARGS+=	-Degl=enabled \
 		-Dllvm=disabled
 .else
 MESON_ARGS+=	-Degl=disabled
+LIB_DEPENDS+=	libLLVM-${LLVM_DEFAULT}.so:devel/llvm${LLVM_DEFAULT}
 .endif
 
 .for _gd in ${ALL_GALLIUM_DRIVERS}
