--- a/multimedia/aom/Makefile
+++ b/multimedia/aom/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	aom
 DISTVERSIONPREFIX=	v
-DISTVERSION=	3.6.1
+DISTVERSION=	3.7.0-rc1
 CATEGORIES=	multimedia
 
 MAINTAINER=	jbeich@FreeBSD.org
