net/scamper: update to 20230614b
ChangeLog:
https://mailman.caida.org/pipermail/scamper-announce/2023-August/000034.html

Merged ChangeLog

configure:
 * better tests for zlib, libbz2, and liblzma that check for both
   libraries and headers.
 * change --with-sc_uptime, --with-sc_hoiho, and --with-tests to be
   --enable-sc_uptime, --enable-sc_hoiho, and --enable-tests
 * disable maintainer mode, pass foreign to AM_INIT_AUTOMAKE

scamper:
 * fix regression in multicall binary introduced in 20230605, so that
   scamper-ping, scamper-trace, etc, work again.
 * for scamper -v (have scamper report its version), return 0 on
   exit from scamper process, rather than -1 (255).
 * remove reading regular files from poll/select/epoll/kqueue path,
   which fixes reading regular input files (-f option to scamper) using
   epoll or kqueue
 * fix reading stdin as input (-f option to scamper) when using
   epoll (catch EPOLLHUP)
 * add DNS server to host signature, add host path for scamper_task_find
 * rework scamper_osinfo to work with malformed release names (uname -r)
 * dealias: do not crash on malformed prefixscan and bump commands
 * dealias: fix memory leak of probedefs on malformed commands
 * sting: fix memory leak of recorded packets
 * remove tsps input method (-O tsps option to scamper)
 * fix handling of EPOLLHUP on client disconnection -- Linux-specific
   (scamper -U /path/to/socket)
 * update manual page

libscamperctrl:
 * link against list.o and splaytree.o so that the library is self-contained
 * fix memory leak when task is not accepted
 * fix handling of disconnected instances
 * API improvements

libscamperfile:
 * fix memory leak when reading SOA/MX from warts file
 * fix memory leak when reading PMTUD traceroute structures from warts file
 * sting: fix memory leak of recorded packets

sc_analysis_dump, sc_warts2pcap, sc_wartscat, sc_wartsfilter:
 * link against list.o/utils.o so that these utilities are not reliant on
   those symbols being exported from l

--- a/net/scamper/Makefile
+++ b/net/scamper/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	scamper
-DISTVERSION=	20230605
+PORTVERSION=	20230614b
 CATEGORIES=	net
 MASTER_SITES=	https://www.caida.org/catalog/software/scamper/code/
 DISTNAME=	${PORTNAME}-cvs-${PORTVERSION}
@@ -24,9 +24,10 @@ UPTIME_DESC=	Install sc_uptime
 
 HOIHO_LIB_DEPENDS=	libpcre2-8.so:devel/pcre2
 HOIHO_USES=		localbase:ldflags
-HOIHO_CONFIGURE_WITH=	pcre2 sc_hoiho
+HOIHO_CONFIGURE_ENABLE=	sc_hoiho
+HOIHO_CONFIGURE_WITH=	pcre2
 
 UPTIME_USES=		localbase:ldflags sqlite:3
-UPTIME_CONFIGURE_WITH=	sc_uptime
+UPTIME_CONFIGURE_ENABLE=	sc_uptime
 
 .include <bsd.port.mk>
