Revert "sysutils/seatd: Add a patch submitted upstream to support drm-subtree"
This reverts commit d83ac33fec754a6201d2fda63110ecf6e40d460b.

Upstream merged the patch [1] into 0.8.0.

[1] https://git.sr.ht/~kennylevinsen/seatd/commit/1bd042e5b0a524fb7d30953179474e60974aa6ee

--- a/sysutils/seatd/Makefile
+++ b/sysutils/seatd/Makefile
@@ -23,8 +23,7 @@ PLIST_FILES=	bin/${PORTNAME} \
 		lib/libseat.so.1 \
 		libdata/pkgconfig/libseat.pc
 
-EXTRA_PATCHES=	${PATCHDIR}/cpp.patch:-p1 \
-		${PATCHDIR}/dri.patch:-p1
+EXTRA_PATCHES=	${PATCHDIR}/cpp.patch:-p1
 
 OPTIONS_DEFINE=	BASU MANPAGES
 OPTIONS_DEFAULT=BASU MANPAGES
