net-p2p/twitch-tui: New port: Twitch chat in the terminal

--- a/net-p2p/Makefile
+++ b/net-p2p/Makefile
@@ -104,6 +104,7 @@
     SUBDIR += transmission-qt
     SUBDIR += transmission-remote-gui
     SUBDIR += transmission-utils
+    SUBDIR += twitch-tui
     SUBDIR += udpt
     SUBDIR += uhub
     SUBDIR += vuze
