--- a/devel/py-pdm/Makefile
+++ b/devel/py-pdm/Makefile
@@ -1,12 +1,13 @@
 PORTNAME=	pdm
-PORTVERSION=	2.7.4
+PORTVERSION=	2.8.2
 CATEGORIES=	devel python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
 MAINTAINER=	sunpoet@FreeBSD.org
 COMMENT=	Python Development Master
-WWW=		https://github.com/pdm-project/pdm
+WWW=		https://pdm.fming.dev/latest/ \
+		https://github.com/pdm-project/pdm
 
 LICENSE=	MIT
 LICENSE_FILE=	${WRKSRC}/LICENSE
@@ -15,7 +16,7 @@ BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pdm-backend>=0:devel/py-pdm-backend@${PY_F
 RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}blinker>=0:devel/py-blinker@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}cachecontrol>=0.12.0:www/py-cachecontrol@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}certifi>=0:security/py-certifi@${PY_FLAVOR} \
-		${PYTHON_PKGNAMEPREFIX}findpython>=0.2.2:devel/py-findpython@${PY_FLAVOR} \
+		${PYTHON_PKGNAMEPREFIX}findpython>=0.3.0<1.0.0:devel/py-findpython@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}installer>=0.7<0.8:devel/py-installer@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}packaging>=20.9:devel/py-packaging@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}platformdirs>=0:devel/py-platformdirs@${PY_FLAVOR} \
@@ -26,7 +27,7 @@ RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}blinker>=0:devel/py-blinker@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}rich>=12.3.0:textproc/py-rich@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}shellingham>=1.3.2:devel/py-shellingham@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}tomlkit>=0.11.1<1:textproc/py-tomlkit@${PY_FLAVOR} \
-		${PYTHON_PKGNAMEPREFIX}unearth>=0.9.0:devel/py-unearth@${PY_FLAVOR} \
+		${PYTHON_PKGNAMEPREFIX}unearth>=0.10.0:devel/py-unearth@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}virtualenv>=20:devel/py-virtualenv@${PY_FLAVOR}
 
 USES=		python
@@ -34,15 +35,23 @@ USE_PYTHON=	autoplist concurrent pep517
 
 NO_ARCH=	yes
 
-OPTIONS_DEFINE=	WORKFLOW
-WORKFLOW_DESC=	Workflow support
+OPTIONS_DEFINE=	COOKIECUTTER COPIER KEYRING TRUSTSTORE
+OPTIONS_DEFAULT=KEYRING
+COOKIECUTTER_DESC=	Use cookiecutter to generate project
+COPIER_DESC=		Use copier to generate project
+KEYRING_DESC=		Use keyring to save credentials
+TRUSTSTORE_DESC=	Use truststore as the SSL backend (Python 3.10+)
 
-WORKFLOW_RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}parver>=0.3.1:devel/py-parver@${PY_FLAVOR} \
-			${PYTHON_PKGNAMEPREFIX}pdm-pep517>=1.0.0<2.0.0:devel/py-pdm-pep517@${PY_FLAVOR} \
-			${PYTHON_PKGNAMEPREFIX}pycomplete>=0.3<1:devel/py-pycomplete@${PY_FLAVOR} \
-			${PYTHON_PKGNAMEPREFIX}towncrier>=20:textproc/py-towncrier@${PY_FLAVOR}
+COOKIECUTTER_RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}cookiecutter>=0:devel/py-cookiecutter@${PY_FLAVOR} \
+COPIER_RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}copier>=0:devel/py-copier@${PY_FLAVOR} \
+KEYRING_RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}keyring>=0,1:security/py-keyring@${PY_FLAVOR} \
+TRUSTSTORE_RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}truststore>=0:security/py-truststore@${PY_FLAVOR}
 
 .include <bsd.port.pre.mk>
+
+.if ${PYTHON_REL} < 30900
+RUN_DEPENDS+=	${PYTHON_PKGNAMEPREFIX}importlib-resources>=5:devel/py-importlib-resources@${PY_FLAVOR}
+.endif
 
 .if ${PYTHON_REL} < 31000
 RUN_DEPENDS+=	${PYTHON_PKGNAMEPREFIX}importlib-metadata>=3.6:devel/py-importlib-metadata@${PY_FLAVOR}
