--- a/devel/py-platformdirs/Makefile
+++ b/devel/py-platformdirs/Makefile
@@ -1,18 +1,19 @@
 PORTNAME=	platformdirs
-PORTVERSION=	3.8.1
+PORTVERSION=	3.10.0
 CATEGORIES=	devel python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
 MAINTAINER=	sunpoet@FreeBSD.org
 COMMENT=	Python module for determining appropriate platform-specific dirs
-WWW=		https://github.com/platformdirs/platformdirs
+WWW=		https://platformdirs.readthedocs.io/en/latest/ \
+		https://github.com/platformdirs/platformdirs
 
 LICENSE=	MIT
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}hatch-vcs>=0.3:devel/py-hatch-vcs@${PY_FLAVOR} \
-		${PYTHON_PKGNAMEPREFIX}hatchling>=1.17:devel/py-hatchling@${PY_FLAVOR}
+		${PYTHON_PKGNAMEPREFIX}hatchling>=1.17.1:devel/py-hatchling@${PY_FLAVOR}
 
 USES=		python
 USE_PYTHON=	autoplist concurrent pep517
