--- a/devel/py-pydantic-core/Makefile.crates
+++ b/devel/py-pydantic-core/Makefile.crates
@@ -1,7 +1,7 @@
 CARGO_CRATES=	ahash-0.8.3 \
 		aho-corasick-1.0.2 \
 		autocfg-1.1.0 \
-		base64-0.13.1 \
+		base64-0.21.2 \
 		bitflags-1.3.2 \
 		cc-1.0.79 \
 		cfg-if-1.0.0 \
@@ -11,7 +11,6 @@ CARGO_CRATES=	ahash-0.8.3 \
 		getrandom-0.2.10 \
 		hashbrown-0.14.0 \
 		heck-0.4.1 \
-		idna-0.3.0 \
 		idna-0.4.0 \
 		indexmap-2.0.0 \
 		indoc-1.0.9 \
@@ -44,13 +43,12 @@ CARGO_CRATES=	ahash-0.8.3 \
 		rustversion-1.0.13 \
 		ryu-1.0.14 \
 		scopeguard-1.1.0 \
-		serde-1.0.171 \
-		serde_derive-1.0.171 \
-		serde_json-1.0.100 \
+		serde-1.0.175 \
+		serde_derive-1.0.175 \
+		serde_json-1.0.103 \
 		smallvec-1.11.0 \
 		speedate-0.11.0 \
 		strum-0.25.0 \
-		strum_macros-0.24.3 \
 		strum_macros-0.25.1 \
 		syn-1.0.109 \
 		syn-2.0.25 \
@@ -62,6 +60,7 @@ CARGO_CRATES=	ahash-0.8.3 \
 		unicode-normalization-0.1.22 \
 		unindent-0.1.11 \
 		url-2.4.0 \
+		uuid-1.4.1 \
 		version_check-0.9.4 \
 		wasi-0.11.0+wasi-snapshot-preview1 \
 		windows-targets-0.48.1 \
